--- a/mehman/package.json
+++ b/mehman/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "next": "15.0.3",
-    "react": "^19.3.1",
+    "react": "19.3.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "10.0.6"
   },
   "devDependencies": {
     "eslint": "^8",
