--- a/mehman/package.json
+++ b/mehman/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "next": "15.0.3",
-    "react": "19.3.1",
+    "nodemailer": "^6.9.16",
+    "react": "18.3.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-toastify": "10.0.6"
   },
